--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>LiveTeX</title>
+    <!-- tracking through https://mchartigan.goatcounter.com/ -->
+    <script data-goatcounter="https://mchartigan.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
